apps/bareuptime-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: bareuptime-backend
  labels:
    app: bareuptime-backend
spec:
  type: ClusterIP
  selector:
    app: bareuptime-backend
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
